<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"

    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/txtAppLogin"
        android:textColor="@color/colorTituloApp"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtLogin"
        android:textColor="@color/colorLogin"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtEmail"
        android:textColor="@color/colorEmailSenha"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtHintEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintEmail"
        android:inputType="textPersonName"
        android:textColor="@color/txtHintCamposCadastros"
        android:textColorHint="@color/txtHintCamposCadastros"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtSenha"
        android:textColor="@color/colorEmailSenha"
        android:textSize="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtHintSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintSenha"
        android:inputType="textPassword"
        android:textColor="@color/txtHintCamposCadastros"
        android:textColorHint="@color/txtHintCamposCadastros"
        android:textStyle="bold" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/btnAcessar" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/btnCadastrar" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/txtVersao"
        android:textColor="@color/colorVersao"
        android:textSize="18dp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>